--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <header>
         <img src="image/profile.jpg" alt="Profile Image">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <h1>David Michael Innocent</h1>
+        <button id="darkModeButton">☑️</button>
+        <button id="hamburgerButton">&#8801;</button>
     </header>
 
-    <nav>
+    <nav id="mainMenu">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
