--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p>&copy;<span id="year"></span> David Michael Innocent | Nigerian</p>
+        <p>&copy;<span id="year"></span> David Michael Innocent |Ebonyi Nigerian</p>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
