--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/main.js"></script>
-     <script src="scripts/wealther.js"></script>
+    <script src="scripts/wealther.js"></script>
+    <script src="scripts/links.js"></script>
+
 </body>
 </html>
