--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>David Michael Innocent - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development, David Michael Innocent, course assignment portal">
     <meta name="author" content="David Michael Innocent">
+    <link rel="icon" href="images/favicon.ico">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
 </head>
