--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -55,7 +55,7 @@
     <div class="section">
       <h2>Wireframe</h2>
       <img src="image/wireframe-desktop.png" alt="Wireframe for mobile view">
-      <img src="images/wireframe-mobile.png" alt="Wireframe for desktop view">
+      <img src="image/wireframe-mobile.png" alt="Wireframe for desktop view">
     </div>
   </div>
 
