--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,26 +3,27 @@
    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Saint George Chamber of Commerce</title>
+        <title>9ja Trust Chamber of Commerce</title>
         <meta name="description" content="WDD 230 - Web Frontend Development, David Michael Innocent, Chambers of Commerce">
         <meta name="author" content="David Michael Innocent">
+        <link rel="icon" href="image/favicon.ico">
         <link href="styles/chamber-large.css" rel="stylesheet">
         <link href="styles/chamber.css" rel="stylesheet">
     </head>
 <body>
   <div class="container">
-    <h1>Site Plan: Saint George Chamber of Commerce</h1>
+    <h1>Site Plan: 9ja Trust Chamber of Commerce</h1>
 
     <div class="section">
       <h2>Site Name</h2>
-      <p>Saint George Chamber of Commerce</p>
+      <p>9ja Trust Chamber of Commerce</p>
     </div>
 
     <div class="section">
       <h2>Site Purpose</h2>
       <ul>
-        <li>Promote local businesses and economic development initiatives</li>
-        <li>Facilitate networking opportunities and business-to-business collaborations</li>
+        <li>Promote local businesses and economic development initiatives needs</li>
+        <li>Facilitate networking opportunities and business-to-business collaborations needs</li>
       </ul>
     </div>
 
@@ -31,7 +32,7 @@
       <ul>
         <li>Scenario 1: A local business owner wants to know about upcoming networking events organized by the chamber to expand their professional connections and explore potential partnerships.</li>
         <li>Scenario 2: A visitor to the area is interested in contacting the chamber's board of directors to inquire about business opportunities or seek guidance on starting a new venture.</li>
-        <li>Scenario 3: A potential investor or resident is curious about the population growth in Saint George area and wants to find statistics or reports related to the region's demographic trends.</li>
+        <li>Scenario 3: A potential investor or resident is curious about the population growth in 9ja Trust area and wants to find statistics or reports related to the region's demographic trends.</li>
       </ul>
     </div>
 
