--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -6,7 +6,7 @@
         <title>9ja Trust Chamber of Commerce</title>
         <meta name="description" content="WDD 230 - Web Frontend Development, David Michael Innocent, Chambers of Commerce">
         <meta name="author" content="David Michael Innocent">
-        <link rel="icon" href="image/favicon.ico">
+        <link rel="icon" href="image/favicons.ico">
         <link href="styles/chamber-large.css" rel="stylesheet">
         <link href="styles/chamber.css" rel="stylesheet">
     </head>
