--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
         </section>
 
         <section class="card2">
-            <h2>Information</h2><hr><p>Saint george, utah weather</p><br><p class="cent-wet"><span id="current-temp" ></span><figure class="cent-wet">
-              <img id="weather-icon" src="jj" alt="weather">
-              <figcaption></figcaption>
-            </figure><br><hr>
-            <p>Number of visits: <span class="visits"></span></p> 
+            <h2>Information</h2><hr>
         </section>
 
     </main>
@@ -57,8 +53,6 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/main.js"></script>
-    <script src="scripts/wealther.js"></script>
-    <script src="scripts/links.js"></script>
 
 </body>
 </html>
