--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>David Michael Innocent - WDD 230 - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development, David Michael Innocent, this contain all my course assignment for this semester">
     <meta name="author" content="David Michael Innocent">
-    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap">
+    <link rel="preconnect" href="https://fonts.google.com/">
     <link rel="icon" href="image/favicons.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link href="styles/base.css" rel="stylesheet">
