--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
     </ul>
   </nav>
   <div class="header-content">
-    <img src="images/bg.jpg" alt="Profile Image">
+    <img src="images/home.jpg" alt="Profile Image">
     <div class="cta-btn"><a href="join.html">Join Us Today</a></div>
     </div>
     <main class="main-1">
