--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
     
     <button id="hamburgerButton">&#8801;</button>
     <img src="images/logo.png" alt="logo">
-      <h1 class="h1-name">9ja Trust Chamber of commerce</h1>
+      <h1 class="h1-name">9ja Trust Abuja Chamber of commerce</h1>
   </header>
   <nav id="mainMenu">
     
