--- a/chamber/index.html
+++ b/chamber/index.html
@@ -82,10 +82,11 @@
     <footer>
       <p>&copy;<span id="year"></span> David Michael Innocent | Ebonyi Nigerian</p>
       <p id="lastModified"></p>
-    </footer>
+  </footer>
+  <script src="scripts/getDates.js"></script>
+  <script src="scripts/main.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/json.js"></script>
-    <script src="scripts/getDates.js"></script>
     <script src="scripts/main.js"></script>
   </body>
   </html>
