--- a/chamber/index.html
+++ b/chamber/index.html
@@ -76,11 +76,14 @@
     <footer>
       <p>&copy;<span id="year"></span> David Michael Innocent | Ebonyi Nigerian</p>
       <p id="lastModified"></p>
-  </footer>
-  <script src="scripts/getDates.js"></script>
-  <script src="scripts/main.js"></script>
-    <script src="scripts/weather.js"></script>
-    <script src="scripts/json.js"></script>
-    <script src="scripts/main.js"></script>
+      <br>
+      <span id="phone">Call US: +2349038519171</span>
+      <br>
+      <span id="email">Email: mic23002@byui.edu</span>
+   </footer>
+   <script src="scripts/weather.js"></script>
+   <script src="scripts/json.js"></script>
+   <script src="scripts/getDates.js"></script>
+   <script src="scripts/main.js"></script>
   </body>
   </html>
