--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
             <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
-
+    <div class="hero">
+        <picture>
+          <source srcset="weeko3/images/hero-medium.webp" media="(max-width: 400px)">
+          <img src="weeko3/images/hero-large.webp" alt="Aba-Abia Temple - 2024">
+        </picture>
+        <div class="herolabel">
+          <p>Nigerian Aba-Abia Temple</p>
+        </div>
+      </div>
     <main>
         <h1 class="card3">WDD 230 - Web Frontend Development</h1>
 
@@ -42,10 +50,14 @@
 
         <section class="card2">
             <h2>Information</h2><hr>
+        </figure><br><hr>
+        <p>Number of visits: <span class="visits"></span></p>
         </section>
 
     </main>
-
+    <div class="giframe">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253228.94242310544!2d3.739902653232031!3d7.387227612796606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398d77eeff086f%3A0x3b33e0f76e8e04a9!2sIbadan%2C%20Oyo!5e0!3m2!1sen!2sng!4v1715106144151!5m2!1sen!2sng" class="giframe-2"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     <footer>
         <p>&copy;<span id="year"></span> David Michael Innocent | Ebonyi Nigerian</p>
         <p id="lastModified"></p>
