--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,6 +32,7 @@
       
       <li class="reset"><a href="index.html" class="active">Home</a></li>
       <li class="reset"><a href="join.html">Join</a></li>
+      <li class="reset"><a href="discover.html">Discover</a></li>
     </ul>
   </nav>
   <div class="header-content">
