--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,13 +43,13 @@
             <div class="grid-container">
                 <div class="sidebar sidebar-left">
                     <div class="field">
-                        <h3>Community Services</h3>
-                        <p>Learn about the community services available:</p>
+                        <h3>Building a Stronger Community Together!</h3>
+                        <p>Discover the amazing community services available to you:</p>
                         <br>
-                        <ul>
-                          <li>Youth Center - Offering after-school programs</li>
-                          <li>Senior Center - Providing social activities for seniors</li>
-                          <li>Food Bank - Assisting families in need</li>
+                        <ul class="bullet" style="list-style-type: circle;">
+                          <li>Youth Center: Empowering young minds with after-school programs</li>
+                          <li>Senior Center: Enriching lives with social activities for seniors</li>
+                          <li>Food Bank: Nourishing families in need</li>
                         </ul>
                         <br>
                         <hr class="hr-spot-2">
@@ -58,13 +58,13 @@
                       <br>
                       <hr class="hr-spot">
                       <div class="field">
-                        <h3>Local Businesses</h3>
+                        <h3>Support Local, Shop Local businesses!</h3>
                         <p>Support local businesses in our area:</p>
                         <br>
-                        <ul>
-                          <li>Coffee Shop - Serving artisanal coffee and pastries</li>
-                          <li>Boutique - Fashion and accessories for all styles</li>
-                          <li>Art Gallery - Showcasing local artists' work</li>
+                        <ul class="bullet" style="list-style-type: circle;">
+                          <li>Coffee Shop: Fuel up with artisanal coffee and delicious past</li>
+                          <li>Boutique: Find unique fashion and accessories for every style</li>
+                          <li>Art Gallery: Celebrating the talents of local artists</li>
                         </ul>
                       </div>
                       <br>
@@ -118,7 +118,6 @@
       <span id="email">Email: mic23002@byui.edu</span>
    </footer>
    <script src="scripts/weather.js"></script>
-   <script src="scripts/json.js"></script>
    <script src="scripts/getDates.js"></script>
    <script src="scripts/main.js"></script>
   </body>
