--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav id="mainMenu">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="form.html">Form</a></li>
