--- a/chamber/join.html
+++ b/chamber/join.html
@@ -77,7 +77,7 @@
                             </select>
                       </div>
                       <div>
-                        <label for="business" class="top">Business description:</label>
+                        <label for="business" class="top">Business Name description:</label>
                         <textarea  id="business" name="business"  required></textarea>
                       </div>
                       <div>
