--- a/chamber/join.html
+++ b/chamber/join.html
@@ -104,7 +104,7 @@
                 <ul class="bullet" style="list-style-type: circle;">
                   <li>No fee for non-profit organizations.</li>
                   <li> Access to networking events and business development opportunities.</li>
-                  <li>IListing in the Chamber's directory and online platform, showcasing your organization to a wide audience.</li>
+                  <li>Listing in the Chamber's directory and online platform, showcasing your organization to a wide audience.</li>
                   <li>Opportunities for collaboration and partnerships with other non-profit and business members.</li>
                 </ul>
                 <br><hr class="hr-spot-hide">
@@ -121,7 +121,7 @@
                 <ul class="bullet" style="list-style-type: circle;">
                   <li>Membership fee at a higher investment level.</li>
                   <li> All the benefits of Bronze Membership, plus:</li>
-                  <li>Priority access to Chamber networking events and industry-specific workshops</li>
+                  <li>Priority access to Chamber networking events and industry-specific workshops.</li>
                   <li>Enhanced exposure with featured spotlights on the Chamber's home page and social media platforms.</li>
                   <li>Display of your organization's marketing materials at Chamber events and the Chamber office.</li>
                 </ul>
