--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -41,7 +41,7 @@
     </div>
     <main class="form-class">
           
-        <h2 class="no-card">Thanks for creating an account. A Confirmation mail sent to you. Check your inbox. </h2>   
+        <h2 class="no-card">Congratulations account created succesfully... Thanks for creating an account with us. We've sent you Confirmation mail, kindly check your mail inbox. </h2>   
     </main>
     <footer>
       <p>&copy;<span id="year"></span> David Michael Innocent | Ebonyi Nigerian</p>
