--- a/chamber/join.html
+++ b/chamber/join.html
@@ -60,11 +60,11 @@
                       </div>
                       <div>
                         <label for="email" class="top">Email:</label>
-                        <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+-]+@gmail\.com$" title="Please enter a valid email address" placeholder="@gmail.com">
+                        <input type="email" id="email1" name="email" required pattern="[a-zA-Z0-9._%+-]+@gmail\.com$" title="Please enter a valid email address" placeholder="@gmail.com">
                       </div>
                       <div>
                         <label for="phone" class="top">Mobile phone number:</label>
-                        <input type="tel" id="phone" name="phone" required>
+                        <input type="tel" id="phone1" name="phone" required>
                       </div>
                       <div>
                         <label for="membership" class="top">Membership level:</label>
