--- a/chamber/join.html
+++ b/chamber/join.html
@@ -60,11 +60,11 @@
                       </div>
                       <div>
                         <label for="email" class="top">Email:</label>
-                        <input type="email" id="email1" name="email" required pattern="[a-zA-Z0-9._%+-]+@gmail\.com$" title="Please enter a valid email address" placeholder="@gmail.com">
+                        <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+-]+@gmail\.com$" title="Please enter a valid email address" placeholder="@gmail.com">
                       </div>
                       <div>
                         <label for="phone" class="top">Mobile phone number:</label>
-                        <input type="tel" id="phone1" name="phone" required>
+                        <input type="tel" id="phone" name="phone" required>
                       </div>
                       <div>
                         <label for="membership" class="top">Membership level:</label>
@@ -134,7 +134,6 @@
                   <li>Premier positioning with top-tier logo placement on the Chamber's website and promotional materials.</li>
                   <li>Direct engagement with influential business and community leaders through executive networking events.</li>
                 </ul>
-                
               </div></div>
               
             </div>
@@ -144,9 +143,9 @@
     <p>&copy;<span id="year"></span> David Michael Innocent | Ebonyi Nigerian</p>
     <p id="lastModified"></p>
     <br>
-    <span id="phone">Call US: +2349038519171</span>
+    <span id="phone1">Call US: +2349038519171</span>
     <br>
-    <span id="email">Email: mic23002@byui.edu</span>
+    <span id="email1">Email: mic23002@byui.edu</span>
  </footer>
    <script src="scripts/getDates.js"></script>
    <script src="scripts/main.js"></script>
