--- a/chamber/join.html
+++ b/chamber/join.html
@@ -86,7 +86,7 @@
                       </div>
                       <div>
                         <label for="submit" style="display: none;" >Submit</label>
-                        <input type="submit" name="submit" id="submit" value="Submit Form">
+                        <input type="submit" name="submit" id="submit" value="Register now">
                         <button style="display: none;" type="submit">submit</button>
                       </div>
                     </form>
