--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,6 +55,10 @@
                         <input type="text" id="lastname" name="lastname" required>
                       </div>
                       <div>
+                        <label for="middlename" class="top">Middle Name:</label>
+                        <input type="text" id="middlename" name="middlename" required>
+                      </div>                    
+                      <div>
                         <label for="position" class="top">Position:</label>
                         <input type="text" id="position" name="position" pattern="[A-Za-z\s\-]{7,}" title="Please enter a valid title or position with a minimum of seven characters (only alphabets, hyphens, and spaces are allowed)">
                       </div>
