--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
         <h1 class="card3">WDD 230 - Web Frontend Development</h1>
 
         <section class="card">
-            <h2>Learning Activities</h2>
+            <h2 class="info">Learning Activities</h2>
             <ul id="activities-container"></ul>
         </section>
-
         <section class="card2">
-            <h2>Information</h2><hr>
-        <p>Number of visits: <span class="visits"></span></p>
+                <h3 class="info">Information</h3><hr><p>Saint george, utah weather</p><br><p class="cent-wet"><span id="current-temp" ></span><figure class="cent-wet">
+                  <img id="weather-icon" src="jj" alt="weather">
+                  <figcaption></figcaption>
+                </figure><br><hr>
+                <p>Number of visits: <span class="visits"></span></p>
         </section>
 
     </main>
@@ -63,6 +65,9 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
+  
 
 </body>
 </html>
