--- a/week05/weather.html
+++ b/week05/weather.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-      <h1>Latter-day Prophets</h1>
+      <h1>OpenWeatherMap.org API Test</h1>
     </header>
     <hr>
     <main class="weather">
