--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <ul id="activities-container"></ul>
         </section>
         <section class="card2">
-                <h3 class="info">Information</h3><hr><p>9ja Trust | Ibadan Weather</p><br><p class="cent-wet"><span id="current-temp" ></span><figure class="cent-wet">
+                <h3 class="info">Information</h3><hr><p>Nigerian Ibadan Weather</p><br><p class="cent-wet"><span id="current-temp" ></span><figure class="cent-wet">
                   <img id="weather-icon" src="jj" alt="weather">
                   <figcaption></figcaption>
                 </figure><br><hr>
