--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,6 +32,7 @@
       
       <li class="reset"><a href="index.html">Home</a></li>
       <li class="reset"><a href="discover.html" class="active">Discover</a></li>
+      <li class="reset"><a href="directory.html">Directory</a></li>
       <li class="reset"><a href="join.html">Join</a></li>
     </ul>
   </nav>
